made updates and changes to wireframe

--- a/index.html
+++ b/index.html
@@ -11,11 +11,27 @@
 <body>
     <nav role="navigation">Section Links</nav>
     <main role="main">
-       <header><h1>Headline and Picture</h1></header>
+       <header><h1>Hello, Melanie here! Thanks for stopping by to check out my page!</h1></header>
        
-       <section class="bio">About Me</section>
+       <section class="bio">
+           <h1>About Me</h1>
+           <p>A little about me? Gosh, where do I start? I am a mother of 4 and LOVE my family. 
+            Although I have battled with a few disabilities, I've always loved computers and studying the many different 
+            things you can do with them. Becoming a Developer is just another step in my journey to better my career so that I can 
+            provide my kids with the best life possible. When I am not working or coding, you can find me goofing off with my kids,
+            going on family trips, or simply just binge watching tv shows.
+            </p>
+       </section>
 
-       <Section class="projects">Projects</Section>
+       <Section class="projects">
+           <h1>Projects</h1>
+           <p>Title: Test Your Game of Thrones Knowledge
+              This is a short quiz for all the my GOT fans.
+             I had the pleasure of working on this project with 
+            one of my classmates, who is also a GOT fan. It consists of 5 questions 
+            one at a time and provides the correct answer if the wrong answer is checked. 
+            done using HTML, CSS, javaScript, jQuery and a bit of DOM manipulation. </p>
+        </Section>
     </main>
     <footer class="contact">Contact Info</footer>
     
